# django-pagetools

./: .gitignore  .travis.yml  CHANGELOG.txt  MANIFEST.in  Pipfile  README.md  README.rst  TODO.md  cypress.config.js  dev_requirements.txt  package.json  pylintrc  pyproject.toml  readthedocs.yml  runtests.py  setup.py  tox.ini
.circleci/: config.yml
.gitea/workflows/: github-actions-test.yml
.github/workflows/: github-actions-test.yml  github-actions-testBAK.yml
cypress/e2e/: spec.cy.js
cypress/support/: commands.js
demo/: dashboard.py  manage.py  pagetools
demo/demo/: settings.py  urls.py
demo/demo/settings/: __init__.py  demo.py  tests.py
demo/demo_sections/: models.py  views.py
demo/demo_sections/templates/demo_sections/: article_list.html
demo/demo_sections/tests/: __init__.py  test_admin.py  test_models.py  test_views.py
demo/main/: apps.py  templatetags.py  views.py
demo/main/management/commands/: createdemodata.py
demo/main/migrations/: 0002_delete_choosabletemplatewidget.py
demo/polls/: models.py  tests.py  views.py
demo/static/css/: app.css
demo/templates/: base.html
docs/: conf.py  conf.tmpl  index.rst  menus.rst  pollsandpagetools.rst  quickstart.rst  requirements.txt  search2.rst
pagetools/: __init__.py  admin.py  dashboard_modules.py  models.py  urls.py  utils.py  views.py
pagetools/locale/de/LC_MESSAGES/: django.mo  django.po
pagetools/menus/: admin.py  apps.py  dashboard_modules.py  models.py  utils.py  views.py
pagetools/menus/locale/de/LC_MESSAGES/: django.mo  django.po
pagetools/menus/migrations/: 0009_remove_menuentry_slug.py
pagetools/menus/static/pagetools/admin/js/: menuentries.js
pagetools/menus/templates/: foundation6_nav_menu.html  menutag.html
pagetools/menus/templatetags/: menus_tags.py
pagetools/menus/tests/: __init__.py  test_admin.py  test_dashboard_module.py  test_forms.py  test_models.py  test_templatetags.py  test_views.py
pagetools/pages/: __init__.py  admin.py  apps.py  forms.py  models.py  validators.py  views.py
pagetools/pages/locale/de/LC_MESSAGES/: django.mo  django.po
pagetools/pages/migrations/: 0009_alter_page_content.py
pagetools/pages/tests/: test_admin.py  test_models.py  test_views.py
pagetools/search/: __init__.py  forms.py  urls.py  views.py
pagetools/search/tests/: test_views.py
pagetools/sections/: admin.py  apps.py  dashboard_modules.py  models.py  urls.py  views.py
pagetools/sections/locale/de/LC_MESSAGES/: django.po
pagetools/sections/templates/sections/: base_node.html
pagetools/sections/templatetags/: sections_tags.py
pagetools/sections/tests/: test_models.py
pagetools/subscriptions/: admin.py  apps.py  base_models.py  forms.py  models.py  settings.py  urls.py  utils.py  views.py
pagetools/subscriptions/locale/de/LC_MESSAGES/: django.mo  django.po
pagetools/subscriptions/migrations/: 0002_alter_queuedemail_body.py
pagetools/subscriptions/templates/admin/subscriptions/subscriber/: mass_subscription.html  sub_change_list.html
pagetools/subscriptions/templates/subscriptions/: activation_msg.txt
pagetools/subscriptions/templatetags/: subscriptions_tags.py
pagetools/subscriptions/tests/: test_templatetags.py  test_utils.py  test_views.py
pagetools/templates/core/: paginate.html
pagetools/templates/pagetools/: paginate.html
pagetools/templates/pagetools/admin/: change_form_help_text.html
pagetools/tests/: test_models.py  test_utils.py  test_views.py
pagetools/widgets/: admin.py  models.py  utils.py  views.py
pagetools/widgets/locale/de/LC_MESSAGES/: django.mo  django.po
pagetools/widgets/management/commands/: mk_templatetagwidgets.py
pagetools/widgets/migrations/: 0004_delete_pagetypedescription.py  0005_alter_contentwidget_content.py  0006_alter_templatetagwidget_options.py
pagetools/widgets/templates/admin/widgets/typearea/: change_form.html
pagetools/widgets/tests/: test_admin.py  test_commands.py  test_context_processors.py
tests/: dashboard.py  settings.py  urls.py
