[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | migrations
  | \.mypy_cache
)
'''

[tool.isort]
profile = "black"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
files = [ "pagetools" ]
exclude = [
    "migrations"
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pdm]
distribution = false
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"


[tool.pdm.scripts]
_.env_file = ".env"
lint = "pylint pagetools demo -vvv"
cov = "coverage run runtests.py"
#start = "source ./.venv/bin/acivate && source .env"

[tool.pdm.dev-dependencies]
dev = [
    "invoke",
    "django-debug-toolbar",
    "sphinx-rtd-theme",
    "black",
    "pylint",
    "flake8",
    "coverage",
    "pylint-django",
    "pudb",
    "sphinx",
    "tox>=4.2.8",
    "build>=0.10.0",
]
[tool.setuptools.packages.find]
    include = ["pagetools*"]  # p
[project]
name = "django-pagetools"
version = "0.9.11"
description = "Some CMS-like Feaures"
authors = [
    {name = "Tim Heithecker", email = "tim.heithecker@gmail.com"},
]
dependencies = [
    "Django==4.2.*",
    "django-crispy-forms",
    "django-grappelli",
    "beautifulsoup4",
    "django-filebrowser",
    "django-mptt",
    "django-sekizai",
    "django-model-utils",
    "django-simple-captcha",
    "djangoajax",
    "Pillow",
    "setuptools>=65.7.0",
    "crispy-forms-foundation>=0.9.0",
    "django-tinymce>=3.6.1",
    "django-stubs>=4.2.6",
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.rst"
