[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | migrations
  | \.mypy_cache
)
'''

[tool.isort]
profile = "black"


[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
files = [ "pagetools" ]
exclude = [
    "migrations"
]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pdm]
distribution = false
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"


[tool.pdm.scripts]
_.env_file = ".env"
lint = "pylint pagetools demo -vvv"
cov = "coverage run runtests.py"
#start = "source ./.venv/bin/acivate && source .env"

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "build>=0.10.0",
    "coverage",
    "django-debug-toolbar",
    "flake8",
    "invoke",
    "pudb",
    "pylint",
    "pylint-django",
    "setuptools>=65.7.0",
    "sphinx",
    "sphinx-rtd-theme",
    "tox>=4.2.8",
]
[tool.setuptools.packages.find]
    include = ["pagetools*"]  # p

[project]
name = "django-pagetools"
version = "0.9.13"
description = "Some CMS-like Feaures"
authors = [
    {name = "Tim Heithecker", email = "tim.heithecker@gmail.com"},
]
dependencies = [
    "Django==4.2.*",
    "Pillow",
    "beautifulsoup4",
    "crispy-forms-foundation>=0.9.0",
    "django-crispy-forms",
    "django-filebrowser",
    "django-grappelli",
    "django-model-utils",
    "django-mptt",
    "django-sekizai",
    "django-simple-captcha",
    "django-stubs>=4.2.6",
    "django-tinymce>=3.6.1",
    "djangoajax",
]
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.rst"
